# iceberg-fyi

./: .env.template  .gitignore  README.md  env_vars.py  generate-test-results-for-compatible-stacks.py  minio_hello.py  pyproject.toml  runner.py
database/: catalog.yml  catalog_interface.yml  ecosystem.yml  posts.yml  query_engine.yml  results.yml  seeds.yml  storage.yml  storage_interface.yml  tests.yml
iceberg_test/: base.py
iceberg_test/catalog/: aws_glue.py  lakekeeper.py  nessie.py  polaris.py  snowflake.py
iceberg_test/query_engine/: snowflake.py  trino.py
iceberg_test/storage/: azure_storage.py  cloudflare_r2.py  minio.py  s3.py
iceberg_test/test_suite/: sql_tests.py
website/: README.md  main.py  pyproject.toml  requirements.txt
website/templates/: base.html  index.html
website/templates/components/: news.partial.html  test-result.partial.html
